Bug 788823 - Link wrapping breaks paragraph text incorrectly

--- a/data/webview.css
+++ b/data/webview.css
@@ -80,7 +80,7 @@ object { /* GtkWidgets */
   font-weight: bold;
 }
 
-a {
+a.evo-awrap {
   white-space: normal;
   word-break: break-all;
 }
